
[workspace]
members = [
    "crypto/picomint-tbs",
    "crypto/picomint-tpe",
    "picomint-base32",
    "picomint-bitcoin-rpc",
    "picomint-client",
    "picomint-core",
    "picomint-derive",
    "picomint-encoding",
    "picomint-eventlog",
    "picomint-gateway-cli",
    "picomint-gateway-cli-core",
    "picomint-gateway-daemon",
    "picomint-integration-tests",
    "picomint-iroh-api",
    "picomint-lnurl",
    "picomint-logging",
    "picomint-recurring-daemon",
    "picomint-redb",
    "picomint-server-cli",
    "picomint-server-cli-core",
    "picomint-server-daemon",
]
resolver = "2"

[workspace.package]
authors = ["joschisan"]
description = "picomint: a minimal federated Chaumian ecash mint on Bitcoin"
documentation = "https://github.com/joschisan/picomint"
edition = "2024"
homepage = "https://github.com/joschisan/picomint"
keywords = ["bitcoin", "lightning", "chaumian", "ecash", "federated"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joschisan/picomint"
version = "0.1.0"

[workspace.metadata]
authors = ["joschisan"]
description = "picomint: a minimal federated Chaumian ecash mint on Bitcoin"
documentation = "https://github.com/joschisan/picomint"
edition = "2024"
homepage = "https://github.com/joschisan/picomint"
keywords = ["bitcoin", "lightning", "chaumian", "ecash", "federated"]
license-file = "LICENSE"
name = "picomint"
readme = "README.md"
repository = "https://github.com/joschisan/picomint"

[workspace.dependencies]
aleph-bft = { package = "fedimint-aleph-bft", version = "0.36.0", default-features = false }
anyhow = "1.0.98"
aquamarine = "0.5.0"
argon2 = "0.5.3"
assert_matches = "1.5.0"
async-channel = "2.5.0"
async-lock = "3.4"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.8.8"
axum-extra = "0.12.5"
backon = { version = "1.5.1", default-features = false }
backtrace = "0.3.76"
base64 = "0.22.1"
bech32 = "0.11.1"
bincode = "1.3.3"
bip39 = "2.2.2"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-io = "0.1.2"
bitcoin-units = "0.1.2"
bitcoin_hashes = "0.14.0"
bitcoincore-rpc = "0.19.0"
bitvec = "1.0.1"
bls12_381 = "0.8.0"
bon = "3.6.5"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5.66"
criterion = "0.5.1"
derive_more = { version = "2.1.1", features = ["display", "from_str"] }
dirs = "6.0.0"
erased-serde = "0.4"
esplora-client = { version = "0.12.3", default-features = false, features = [
    "async-https-rustls",
    "async",
    "tokio",
] }
fs2 = "0.4.3"
futures = "0.3.32"
futures-util = "0.3.30"
getrandom = "0.3.3"
gloo-timers = "0.3.0"
group = "0.13.0"
hex = "0.4.3"
hex-conservative = "1.0.0"
hyper = "1.6"
imbl = "5.0.0"
iroh = { version = "=0.98.0", default-features = false, features = ["tls-ring", "address-lookup-mdns"] }
iroh-base = { version = "=0.98.0", default-features = false }
iroh-relay = { version = "=0.98.0", default-features = false }
itertools = "0.14.0"
js-sys = "0.3.69"
jsonrpsee = "0.24.9"
jsonrpsee-core = "0.24.9"
jsonrpsee-types = "0.24.8"
ldk-node = "0.7.0"
lightning = "0.2.0"
lightning-invoice = { version = "0.34.0", features = ["serde", "std"] }
lightning-types = "0.3.0"
macro_rules_attribute = "0.2.2"
maud = "0.27.0"
miniscript = "12.3.4"
n0-future = "0.1.3"
parity-scale-codec = "3.7.5"

picomint-base32 = { path = "./picomint-base32", version = "=0.1.0" }
picomint-bitcoin-rpc = { path = "./picomint-bitcoin-rpc", version = "=0.1.0" }
picomint-client = { path = "./picomint-client", version = "=0.1.0" }
picomint-core = { path = "./picomint-core", version = "=0.1.0" }
picomint-derive = { path = "./picomint-derive", version = "=0.1.0" }
picomint-encoding = { path = "./picomint-encoding", version = "=0.1.0" }
picomint-eventlog = { path = "./picomint-eventlog", version = "=0.1.0" }
picomint-gateway-cli-core = { path = "./picomint-gateway-cli-core", version = "=0.1.0" }
picomint-gateway-daemon = { path = "./picomint-gateway-daemon", version = "=0.1.0" }
picomint-iroh-api = { path = "./picomint-iroh-api", version = "=0.1.0" }
picomint-lnurl = { path = "./picomint-lnurl", version = "=0.1.0" }
picomint-logging = { path = "./picomint-logging", version = "=0.1.0" }
picomint-redb = { path = "./picomint-redb", version = "=0.1.0" }
picomint-server-cli = { path = "./picomint-server-cli", version = "=0.1.0" }
picomint-server-cli-core = { path = "./picomint-server-cli-core", version = "=0.1.0" }
picomint-server-daemon = { path = "./picomint-server-daemon", version = "=0.1.0" }
pin-project = "1.1.11"
pkarr = { version = "3.10.0", default-features = false }
proc-macro2 = "1.0"
prometheus = "0.14.0"
qrcode = "0.14"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
rcgen = "=0.13.2"
redb = "3"
reqwest = { version = "0.12.22", features = [
    "json",
    "rustls-tls-no-provider",
    "charset",
    "http2",
    "stream",
], default-features = false }
ring = "0.17.14"
rusqlite = { version = "0.31", features = ["bundled"] }
scopeguard = "1.2.0"
secp256k1 = { version = "0.29.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_millis = "0.1.1"
serde_with = { version = "3", features = ["hex"] }
serdect = "0.2.0"
sha3 = "0.10.8"
slotmap = "1.0.7"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
subtle = "2.6.1"
syn = "2.0"
tbs = { package = "picomint-tbs", path = "./crypto/picomint-tbs", version = "=0.1.0" }
tempfile = "3.20.0"
test-log = { version = "0.2", features = ["trace"], default-features = false }
thiserror = "2.0.18"
threshold_crypto = { version = "0.2.1", package = "fedimint-threshold-crypto" }
tokio = "1.48.0"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-stream = "0.1.18"
tokio-test = "0.4.5"
tokio-util = "0.7.18"
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.6.8", features = ["cors"] }
tpe = { package = "picomint-tpe", path = "./crypto/picomint-tpe", version = "=0.1.0" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.6"
url = "2.5.4"
wasm-bindgen-futures = "0.4.42"
z32 = "1"

[workspace.lints.clippy]
dbg_macro = "deny"
literal_string_with_formatting_args = "deny"

[profile.dev]
debug = "line-tables-only"
# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
opt-level = 3

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
ahash = { opt-level = 3 }
aleph-bft-crypto = { opt-level = 3 }
aleph-bft-rmc = { opt-level = 3 }
aleph-bft-types = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
byteorder = { opt-level = 3 }
fedimint-threshold-crypto = { opt-level = 3 }
group = { opt-level = 3 }
hashbrown = { opt-level = 3 }
libc = { opt-level = 3 }
memchr = { opt-level = 3 }
pairing = { opt-level = 3 }
parity-scale-codec = { opt-level = 3 }
ppv-lite86 = { opt-level = 3 }
rand = { opt-level = 3 }
rand_chacha = { opt-level = 3 }
rand_core = { opt-level = 3 }
regex = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
subtle = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.dev.package."*"] # external dependencies
opt-level = 1

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"

[profile.ci.build-override]
debug = false
opt-level = 1

[profile.release]
debug = "line-tables-only"
lto = "thin"
