
[workspace]
members = [
    "crypto/picomint-tbs",
    "crypto/picomint-tpe",
    "picomint-base32",
    "picomint-bft",
    "picomint-bitcoin-rpc",
    "picomint-client",
    "picomint-core",
    "picomint-derive",
    "picomint-encoding",
    "picomint-eventlog",
    "picomint-fountain",
    "picomint-gateway-cli",
    "picomint-gateway-cli-core",
    "picomint-gateway-daemon",
    "picomint-integration-tests",
    "picomint-lnurl",
    "picomint-recurring-daemon",
    "picomint-redb",
    "picomint-server-cli",
    "picomint-server-cli-core",
    "picomint-server-daemon",
]
resolver = "2"

[workspace.package]
authors = ["joschisan"]
description = "picomint: a minimal federated Chaumian ecash mint on Bitcoin"
documentation = "https://github.com/joschisan/picomint"
edition = "2024"
homepage = "https://github.com/joschisan/picomint"
keywords = ["bitcoin", "lightning", "chaumian", "ecash", "federated"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joschisan/picomint"
version = "0.1.0"

[workspace.metadata]
authors = ["joschisan"]
description = "picomint: a minimal federated Chaumian ecash mint on Bitcoin"
documentation = "https://github.com/joschisan/picomint"
edition = "2024"
homepage = "https://github.com/joschisan/picomint"
keywords = ["bitcoin", "lightning", "chaumian", "ecash", "federated"]
license-file = "LICENSE"
name = "picomint"
readme = "README.md"
repository = "https://github.com/joschisan/picomint"

[workspace.dependencies]
anyhow = "1.0.98"
async-channel = "2.5.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.8.8"
axum-extra = "0.12.5"
backon = { version = "1.5.1", default-features = false }
bech32 = "0.11.1"
bip39 = "2.2.2"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-io = "0.1.2"
bitcoin_hashes = "0.14.0"
bitcoincore-rpc = "0.19.0"
bls12_381 = "0.8.0"
clap = { version = "4.5.60", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["display", "from_str"] }
esplora-client = { version = "0.12.3", default-features = false, features = [
    "async-https-rustls",
    "async",
    "tokio",
] }
futures = "0.3.32"
group = "0.13.0"
hex = "0.4.3"
hyper = "1.6"
iroh = { version = "=0.98.0", default-features = false, features = ["tls-ring", "address-lookup-mdns"] }
iroh-base = { version = "=0.98.0", default-features = false }
ldk-node = "0.7.0"
lightning = "0.2.0"
lightning-invoice = { version = "0.34.0", features = ["serde", "std"] }
lightning-types = "0.3.0"
maud = "0.27.0"
miniscript = "12.3.4"
picomint-base32 = { path = "./picomint-base32", version = "=0.1.0" }
picomint-bft = { path = "./picomint-bft", version = "=0.1.0" }
picomint-bitcoin-rpc = { path = "./picomint-bitcoin-rpc", version = "=0.1.0" }
picomint-client = { path = "./picomint-client", version = "=0.1.0" }
picomint-core = { path = "./picomint-core", version = "=0.1.0" }
picomint-derive = { path = "./picomint-derive", version = "=0.1.0" }
picomint-encoding = { path = "./picomint-encoding", version = "=0.1.0" }
picomint-eventlog = { path = "./picomint-eventlog", version = "=0.1.0" }
picomint-fountain = { path = "./picomint-fountain", version = "=0.1.0" }
picomint-gateway-cli-core = { path = "./picomint-gateway-cli-core", version = "=0.1.0" }
picomint-gateway-daemon = { path = "./picomint-gateway-daemon", version = "=0.1.0" }
picomint-lnurl = { path = "./picomint-lnurl", version = "=0.1.0" }
picomint-redb = { path = "./picomint-redb", version = "=0.1.0" }
picomint-server-cli = { path = "./picomint-server-cli", version = "=0.1.0" }
picomint-server-cli-core = { path = "./picomint-server-cli-core", version = "=0.1.0" }
picomint-server-daemon = { path = "./picomint-server-daemon", version = "=0.1.0" }
proc-macro2 = "1.0"
qrcode = "0.14"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
redb = "3"
reqwest = { version = "0.12.22", features = [
    "json",
    "rustls-tls-no-provider",
    "charset",
    "http2",
    "stream",
], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
secp256k1 = { version = "0.29.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_with = { version = "3", features = ["hex"] }
serdect = "0.2.0"
subtle = "2.6.1"
syn = "2.0"
tbs = { package = "picomint-tbs", path = "./crypto/picomint-tbs", version = "=0.1.0" }
tempfile = "3.20.0"
test-log = { version = "0.2", features = ["trace"], default-features = false }
thiserror = "2.0.18"
tokio = "1.48.0"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["cors"] }
tpe = { package = "picomint-tpe", path = "./crypto/picomint-tpe", version = "=0.1.0" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.4"

# Thin LTO is a measurable perf win for the federation guardian's
# crypto-heavy hot paths and worth the modest extra release-build time.
[profile.release]
lto = "thin"
