[package]
authors = { workspace = true }
description = "Bitcoin RPC implementations for Picomint"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-bitcoin-rpc"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_bitcoin_rpc"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
esplora-client = { workspace = true }
picomint-core = { workspace = true }
picomint-logging = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
