[package]
authors = { workspace = true }
description = "picomint-core provides common code used by both client and server."
edition = { workspace = true }
license = { workspace = true }
name = "picomint-core"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
bls12_381 = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
group = { workspace = true }
hex = { workspace = true, features = ["serde"] }
iroh-base = { workspace = true, default-features = false }
lightning-invoice = { workspace = true }
miniscript = { workspace = true, features = ["serde"] }
picomint-base32 = { workspace = true }
picomint-encoding = { workspace = true }
picomint-redb = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde = { workspace = true }
subtle = { workspace = true }
tbs = { workspace = true }
thiserror = { workspace = true }
tpe = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
