[package]
authors = { workspace = true }
description = "picomint-derive provides helper macros for serialization."
edition = { workspace = true }
license = { workspace = true }
name = "picomint-derive"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
