[package]
authors = { workspace = true }
description = "Fountain encoder/decoder for splitting and recombining byte payloads"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-fountain"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_fountain"
path = "src/lib.rs"

[dependencies]
bitcoin_hashes = { workspace = true }
picomint-encoding = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
