[package]
authors = { workspace = true }
description = "Shared types for picomint-gateway admin CLI"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-gateway-cli-core"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
bitcoin = { workspace = true }
lightning-invoice = { workspace = true }
picomint-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
