[package]
description = "Client for interacting with the gateway"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "picomint-gateway-cli"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[[bin]]
name = "picomint-gateway-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true }
http-body-util = "0.1"
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
lightning-invoice = { workspace = true }
picomint-core = { workspace = true }
picomint-gateway-cli-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tower-service = "0.3"

[lints]
workspace = true
