[package]
authors = { workspace = true }
description = "Picomint gateway daemon"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-gateway-daemon"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_gateway_daemon"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, features = ["json"] }
bitcoin = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
picomint-eventlog = { workspace = true }
iroh = { workspace = true, default-features = false }
ldk-node = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
picomint-base32 = { workspace = true }
picomint-client = { workspace = true }
picomint-core = { workspace = true }
picomint-encoding = { workspace = true }
picomint-gateway-cli-core = { workspace = true }
picomint-lnurl = { workspace = true }
picomint-logging = { workspace = true }
picomint-redb = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tower-http = { workspace = true, features = ["cors", "auth"] }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
itertools = { workspace = true }
tpe = { workspace = true }

[lints]
workspace = true
