[package]
authors = { workspace = true }
description = "Shared types for picomint-guardian admin CLI"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-guardian-cli-core"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true }
picomint-core = { workspace = true }
serde = { workspace = true }
